...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/artist_album_list"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/background"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
